--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +16,8 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "standard": "^17.0.0",
+    "sweetalert2": "^11.4.33",
+    "sweetalert2-react-content": "^5.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
